@@ -1,3 +1,13 @@
+2009-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/highlighting.c, src/highlighting.h, src/keyfile.c, src/main.c,
+   src/editor.h:
+   Add 'View->Editor->Color Schemes' menu, for now only shown if color
+   scheme files exist in a colorschemes config directory. Color scheme
+   files must end in ".conf" and currently only the [named_styles]
+   section is read.
+
+
 2009-10-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/stash.c, src/stash.h:
